--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 aiofiles==23.1.0
 aniso8601==9.0.1
 anyio==3.7.0
+asgiref==3.7.2
 async-exit-stack==1.0.1
 async-generator==1.10
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+Django==4.2
 dnspython==2.3.0
 email-validator==2.0.0.post2
 exceptiongroup==1.1.1
@@ -14,11 +16,13 @@ fastapi==0.52.0
 graphene==3.2.2
 graphql-core==3.2.3
 graphql-relay==3.2.0
+greenlet==2.0.2
 h11==0.14.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+psycopg2==2.9.7
 pydantic==1.10.9
 python-dotenv==1.0.0
 python-multipart==0.0.6
@@ -27,8 +31,11 @@ requests==2.31.0
 Rx==3.2.0
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==2.0.20
+sqlparse==0.4.4
 starlette==0.13.2
 typing_extensions==4.6.3
+tzdata==2023.3
 ujson==5.8.0
 urllib3==2.0.3
 uvicorn==0.22.0
