--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,16 @@ anyio==3.7.0
 asgiref==3.7.2
 async-exit-stack==1.0.1
 async-generator==1.10
+bcrypt==4.0.1
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+cryptography==41.0.3
 Django==4.2
 dnspython==2.3.0
+ecdsa==0.18.0
 email-validator==2.0.0.post2
 exceptiongroup==1.1.1
 fastapi==0.52.0
@@ -21,13 +25,19 @@ h11==0.14.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jose==1.0.0
 MarkupSafe==2.1.3
+passlib==1.7.4
 psycopg2==2.9.7
+pyasn1==0.5.0
+pycparser==2.21
 pydantic==1.10.9
 python-dotenv==1.0.0
+python-jose==3.3.0
 python-multipart==0.0.6
 PyYAML==6.0
 requests==2.31.0
+rsa==4.9
 Rx==3.2.0
 six==1.16.0
 sniffio==1.3.0
